[project]
name = "mpmri-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "itk>=5.4.4.post1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nibabel>=5.3.2",
    "numpy>=2.3.3",
    "pynrrd>=1.1.3",
    "scikit-image>=0.25.2",
    "simpleitk>=2.5.2",
    "tqdm>=4.67.1",
]


[tool.uv]
package = true

[dependency-groups]
dev = [
    "connected-components-3d>=3.26.1",
    "itkwidgets>=0.32.6",
    "scikit-image>=0.25.2",
]
